# PayTrack

./: .env.temlpate  Dockerfile  README.md  alembic.ini  docker-compose.yml  migrates_for_docker.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 3fd4160d0099_initial_migration.py
app/: __init__.py  database.py  main.py  models.py  schemas.py
app/routers/: __init__.py  admins.py  payments.py  users.py
